tests/baselines/reference/superCallBeforeThisAccessing8.errors.txt
tests/cases/conformance/es6/classDeclaration/superCallBeforeThisAccessing8.ts(8,16): error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'Base'.


==== tests/cases/conformance/es6/classDeclaration/superCallBeforeThisAccessing8.ts (1 errors) ====
    class Base {
        constructor(c) { }
    }
    class D extends Base {
        private _t;
        constructor() {
            let x = {
                k: super(undefined), 
                   ~~~~~~~~~~~~~~~~
!!! error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'Base'.
                j: this._t,  // no error
            }
        }
    }
    